# low-latency-matching-engine

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  benchmark_history.md
.github/workflows/: ci.yml  sanitizers.yml
benchmark/: cancel_benchmark.cpp  end_to_end_benchmark.cpp  insert_benchmark.cpp  latency_benchmark.cpp  match_benchmark.cpp  true_mixed_benchmark.cpp
benchmarks/: README.md  benchmark_environment.txt  benchmark_history.db  benchmark_history.sql  best_level_churn_benchmark.cpp  best_level_churn_environment.txt  best_level_churn_results.json  best_level_churn_results.txt  cancel_results.json  cancel_results.txt  deep_sparse_gtc_mixed_benchmark.cpp  deep_sparse_gtc_mixed_environment.txt  deep_sparse_gtc_mixed_results.txt  end_to_end_results.json  end_to_end_results.txt  insert_results.json  insert_results.txt  latency_results.json  latency_results.txt  level_create_delete_churn_benchmark.cpp  level_create_delete_churn_results.json  level_create_delete_churn_results.txt  match_results.json  match_results.txt  order_pool_reserve_40k_results.txt  order_pool_reserve_power13_14_results.json  order_pool_reserve_power13_14_results.txt  order_pool_reserve_power2_results.json  order_pool_reserve_power2_results.txt  order_pool_reserve_sweep_results.json  order_pool_reserve_sweep_results.txt  run_ec2_benchmarks.sh  run_perf_counters.sh  schema.sql  shallow_gtc_mixed_benchmark.cpp  shallow_gtc_mixed_results.json  stress_environment.txt  stress_results.txt  true_mixed_results.json  true_mixed_results.txt
benchmarks/core_hot_path/: batch_latency_benchmark.cpp  cancel_lookup_benchmark.cpp  one_level_crossing_benchmark.cpp  passive_insert_benchmark.cpp  single_order_latency_benchmark.cpp
benchmarks/determinism_replay/: replay_benchmark.cpp
benchmarks/realistic_flow/: end_to_end_true_mixed_benchmark.cpp  true_mixed_benchmark.cpp  true_mixed_workload.hpp
benchmarks/results/: batch_latency_results.json  batch_latency_results.txt  benchmark_environment.txt  cancel_results.json  cancel_results.txt  core_hot_path_perf_stat.txt  core_hot_path_results.json  core_hot_path_results.txt  deep_sparse_gtc_mixed_results.json  determinism_replay_results.json  determinism_replay_results.txt  end_to_end_results.txt  hotpath_source_context.txt  insert_results.txt  latency_results.json  latency_results.txt  match_results.json  match_results.txt  order_pool_reserve_40k_results.json  perf-deep-sparse-benchmark.txt  perf-deep-sparse-report.txt  perf-deep-sparse.data  perf-deep-sparse.folded  perf-end-to-end-true-mixed-benchmark.txt  perf-end-to-end-true-mixed-report.txt  perf-end-to-end-true-mixed.folded  perf-random-cancel-annotate-cancel.txt  perf-random-cancel-benchmark.txt  perf-random-cancel-report.txt  perf-random-cancel.folded  perf-true-mixed-benchmark.txt  perf-true-mixed-report.txt  perf-true-mixed.folded  perf_hotpath_notes.txt  perf_results.csv  perf_results.txt  realistic_flow_perf_stat.txt  realistic_flow_results.json  realistic_flow_results.txt  shallow_gtc_mixed_results.txt  (+8 more)
benchmarks/std_toy_comparison/: std_toy_comparison_benchmark.cpp
benchmarks/stress/: best_level_churn_benchmark.cpp  deep_sparse_gtc_mixed_benchmark.cpp  level_create_delete_churn_benchmark.cpp  shallow_gtc_mixed_benchmark.cpp
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cancel_benchmark  cancel_reserve_sweep_benchmark  cmake_install.cmake  cmake_test_discovery_1445c4ea06.json  cmake_test_discovery_3f03f97148.json  cmake_test_discovery_664e2daf6c.json  cmake_test_discovery_68b2d1355d.json  cmake_test_discovery_91f2c5f09e.json  cmake_test_discovery_e1b0773ffd.json  end_to_end_benchmark  exchange_test  exchange_test[1]_include.cmake  exchange_test[1]_tests.cmake  golden_replay_tests  golden_replay_tests[1]_include.cmake  golden_replay_tests[1]_tests.cmake  insert_benchmark  latency_benchmark  match_benchmark  matching_engine  order_book_invariant_tests  order_book_invariant_tests[1]_include.cmake  order_book_invariant_tests[1]_tests.cmake  order_book_regression_tests  order_book_regression_tests[1]_include.cmake  order_book_regression_tests[1]_tests.cmake  order_book_test  order_book_test[1]_include.cmake  order_book_test[1]_tests.cmake  parser_tests  parser_tests[1]_include.cmake  parser_tests[1]_tests.cmake
docs/: ARCHITECTURE.md  CHANGELOG.md  HOTPATH.md  benchmark_history.md  bid_ask_comparison.md
examples/: demo.orders
include/: action.hpp  event.hpp  exchange.hpp  order.hpp  order_book.hpp  order_pool.hpp  order_queue.hpp  parser.hpp
include/book/: order_book.hpp  order_pool.hpp  order_queue.hpp
include/core/: action.hpp  event.hpp  order.hpp
include/io/: cli_presentation.hpp  local_benchmark_comparison.hpp  parser.hpp  script_runner.hpp
low-latency-matching-engine-main/: BENCHMARKS.md  CMakeLists.txt
low-latency-matching-engine-main/benchmark/: insert_benchmark.cpp  match_benchmark.cpp
low-latency-matching-engine-main/benchmarks/: cancel_results.json  insert_results.json  match_results.txt
low-latency-matching-engine-main/docs/: CHANGELOG.md  HOTPATH.md  benchmark_history.md
low-latency-matching-engine-main/examples/: demo.orders
low-latency-matching-engine-main/src/: exchange.cpp
low-latency-matching-engine-main/tests/: order_book_tests.cpp  parser_tests.cpp
scripts/: docker_validate.sh
src/: exchange.cpp  main.cpp  order_book.cpp  parser.cpp
src/book/: order_book.cpp  order_book_price_levels.cpp
src/io/: cli_presentation.cpp  local_benchmark_comparison.cpp  parser.cpp  script_runner.cpp
tests/: cli_presentation_tests.cpp  exchange_test.cpp  golden_replay_tests.cpp  order_book_test.cpp  order_book_tests.cpp  parser_tests.cpp  replay_cli.txt
tests/invariants/: order_book_invariant_tests.cpp
tests/regression/: order_book_regression_tests.cpp
tests/replay/: README.md  basic_submit_print.expected  basic_submit_print.txt  cancel_existing.expected  (+29 more)
toy/: exchange.cpp  exchange.hpp  order_book.cpp  order_book.hpp
(+6 files in other folders)
